# Infodemic-Flux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
assets/sprites/: spritesheet.txt
data/: zones.csv
data/processed/: agents_config.csv
data/raw/: itu_internet.csv  press_freedom.csv
include/: Agent.h  CountryBorders.h  CountryCentroids.h  DataLoader.h  EventSystem.h  NetworkBuilder.h  PlatformProfile.h  Renderer.h  Simulation.h  World.h  Zone.h
scenarios/: custom.json  scenario_a.json  scenario_b.json  scenario_c.json
scripts/: analyze_run.py  build_agents_config.py  extract_borders.py  generate_readme.py  make_spritesheet.py  remove_bg.py
src/: DataLoader.cpp  EventSystem.cpp  NetworkBuilder.cpp  Renderer.cpp  Simulation.cpp  main.cpp
